--- a/project-manager.html
+++ b/project-manager.html
@@ -45,11 +45,11 @@
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/nutanix/job/o2TCafwr'>Nutanix Careers - Technical Program Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/boxinc/jobs/1169960'>Job Application for Sr. Technical Program Manager, Critical Data Flows at Box</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='https://bcbsfl.referrals.selectminds.com/jobs/it-clinical-program-manager-6300'>IT Clinical Program Manager - Florida Blue Careers</a></h5> 
@@ -96,7 +96,7 @@
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/VAMSystems/743999692421028-project-manager'>VAM Systems Project Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/VAMSystems/743999692421028-project-manager'>VAM Systems Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dubai Singapore</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -192,7 +192,7 @@
 <p><span class="badge badge-light">Sydney</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AjnaInfotech/743999692393573-it-project-manager-ecommerce-'>Ajna Infotech IT Project Manager (eCommerce) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AjnaInfotech/743999692393573-it-project-manager-ecommerce-'>Ajna Infotech IT Project Manager (eCommerce) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -313,7 +313,7 @@ through?...</p>
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/thezebra/a7daf01a-46cd-4d3e-9bfd-e190a194aeb4'>The Zebra - Senior Project Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/thezebra/a7daf01a-46cd-4d3e-9bfd-e190a194aeb4'>The Zebra - Senior Project Manager</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -321,7 +321,7 @@ through?...</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://modus.recruiterbox.com/jobs/fk03ft7/'>
+<h5><a href='https://modus.recruiterbox.com/jobs/fk03ft7/'>
     UX Project Manager at Modus
 </a></h5> 
 <p><span class="badge badge-light">Buenos Aires</span></p>
@@ -404,7 +404,7 @@ time. loading Fetching your Linkedin profile .</p>
 <p>Jul 18, 2019 ... The Getty is now hiring a Project Manager Sr in Los Angeles, California. Review 
 all of the job details and apply today!</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-grubhub.icims.com/jobs/8510/program-manager/job'>Careers at Grubhub - Program Manager in Chicago, Illinois ...</a></h5> 
+<h5><a href='https://careers-grubhub.icims.com/jobs/8510/program-manager/job'>Careers at Grubhub - Program Manager in Chicago, Illinois ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... 111 W Washington Suite 2100, Chicago, IL 60602 is now hiring a Program 
 Manager in Chicago, Illinois. Review all of the job details and apply today!</p>
@@ -442,7 +442,7 @@ today!</p>
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pony-dot-ai.workable.com/jobs/1078522'>pony.ai - Jobs: Material Program Manager - Apply online</a></h5> 
+<h5><a href='https://pony-dot-ai.workable.com/jobs/1078522'>pony.ai - Jobs: Material Program Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Material Program Manager at pony.ai.</p>
 <hr/>
@@ -463,7 +463,7 @@ Media Partners, LLC.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/starry/jobs/4367592002'>Job Application for Technical Project Manager at Starry</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/starry/jobs/4367592002'>Job Application for Technical Project Manager at Starry</a></h5> 
 <p><span class="badge badge-light">Washington, District of Columbia</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
